TC: setting bugfixes; add TcEditRedirector

--- a/Plugins/exe/F4Menu/F4Menu.ini
+++ b/Plugins/exe/F4Menu/F4Menu.ini
@@ -1,25 +1,36 @@
-[Options]
-Language=Russian
-MaxFiles=16
-Position=1
-Tooltips=18
-Unselect=1
-DefMode=4097
-RunMode=285474820
-Cancelling=0
-ShellMenu=0
 [General]
 Count=16
+
+[Options]
+Cancelling=0
+DefMode=4097
+;DefMode=6148
+Language=English
+MaxFiles=16
+Position=1
+RunMode=285474820
+ShellMenu=0
+;ShellMenu=1
+Tooltips=18
+Unselect=1
+
+[Settings]
+ShowStyle=0
+WinPos=22676083
+WinSize=25428634
+Column=275,309,67,220,63,38,50,319,78,
+
 [Program0]
 Name=Notepad++
-Path=%COMMANDER_PATH%\Soft\Notepad++\notepad++.exe
+Path=%ProgramFiles(x86)%\Notepad++\notepad++.exe
 Param=
-Start=%COMMANDER_PATH%\Soft\Notepad++\
+Start=%ProgramFiles(x86)%\Notepad++\
 Main=0
 Mode=0
 Window=0
-Icon=%COMMANDER_PATH%\Soft\Notepad++\notepad++.exe,0
-Type=txt,log,ini,h,hpp,hxx,c,cpp,cxx,cc,m,java,cs,pas,inc,html,htm,php,phtml,js,jsp,asp,css,xml,sh,bsh,nsi,nsh,lua,pl,pm,py,rc,as,mx,vb,vbs,f,for,f90,f95,f2k,tex,sql,nfo,mak
+Icon=%ProgramFiles(x86)%\Notepad++\notepad++.exe,0
+Type=as,asp,bsh,c,cc,cpp,cs,css,cxx,f,f2k,f90,f95,for,h,hpp,htm,html,hxx,inc,ini,java,js,jsp,log,lua,m,mak,manifest,mx,nfo,nsh,nsi,pas,php,phtml,pl,pm,py,rc,sh,sql,tex,txt,vb,vbs,xml
+
 [Program1]
 Name=TextMaker
 Path=%COMMANDER_PATH%\Soft\SoftMaker Office 2012\TextMaker.exe
@@ -30,6 +41,7 @@ Mode=0
 Window=0
 Icon=%COMMANDER_PATH%\Soft\SoftMaker Office 2012\TextMaker.exe,0
 Type=tmd,tmv,doc,docx,docm,dot,dotx,dotm,odt,ott,sxw,rtf,psw,pwd
+
 [Program2]
 Name=PlanMaker
 Path=%COMMANDER_PATH%\Soft\SoftMaker Office 2012\PlanMaker.exe
@@ -40,6 +52,7 @@ Mode=0
 Window=0
 Icon=%COMMANDER_PATH%\Soft\SoftMaker Office 2012\PlanMaker.exe,0
 Type=pmd,pmv,xls,xlsx,xlsm,xlt,xltx,xltm,pmw,sdc,slk
+
 [Program3]
 Name=Presentations
 Path=%COMMANDER_PATH%\Soft\SoftMaker Office 2012\Presentations.exe
@@ -50,6 +63,7 @@ Mode=0
 Window=0
 Icon=%COMMANDER_PATH%\Soft\SoftMaker Office 2012\Presentations.exe,0
 Type=prd,prs,prv,ppt,pptx,pptm,pps,ppsx,ppsm,pot,potx,potm
+
 [Program4]
 Name=PotPlayer
 Path=%COMMANDER_PATH%\Soft\PotPlayer\PotPlayerMini.exe
@@ -60,6 +74,7 @@ Mode=0
 Window=0
 Icon=%COMMANDER_PATH%\Soft\PotPlayer\PotPlayerMini.exe,0
 Type=avi,divx,asf,asx,wm,wmp,wmv,wmx,wvx,m1v,m2v,mpe,mpeg,mpg,tp,ifo,vob,ogm,mkv,rm,rmvb,mov,mqv,mp4,m4v,lmp4,3gp,k3g,skm,dmskm,flv,ts,trp,nsr,mpv2,mp2v,tpr,ogv,m4p,m4b,3gpp,3g2,3gp2,ram,rpm,qt,nsv,dpg,m2ts,m2t,mts,dvr-ms,evo,amv,webm,bik,mxf,wav,wma,mpa,mp2,m1a,m2a,mp3,ogg,m4a,aac,mka,ra,flac,ape,mpc,mod,ac3,dts,wv,tak,asx,m3u,pls,wvx,wax,wmx,cue,mpls,dpl
+
 [Program5]
 Name=AIMP3
 Path=%COMMANDER_PATH%\Soft\AIMP3\AIMP3.exe
@@ -70,6 +85,7 @@ Mode=0
 Window=0
 Icon=%COMMANDER_PATH%\Soft\AIMP3\AIMP3.exe,0
 Type=aac,ac3,ape,cda,fla,flac,it,kar,m4a,m4b,mac,mo3,mod,mp+,mp1,mp2,mp3,mpc,mpp,mtm,ofr,ofs,oga,ogg,rmi,s3m,spx,tak,tta,umx,wav,wma,wv,xm,aimppl,asx,cue,m3u,m3u8,plc,pls,wax,xspf,acs2,acs3
+
 [Program6]
 Name=FSViewer
 Path=%COMMANDER_PATH%\Soft\FSViewer\FSViewer.exe
@@ -80,6 +96,7 @@ Mode=0
 Window=0
 Icon=%COMMANDER_PATH%\Soft\FSViewer\FSViewer.exe,0
 Type=jpg,jpe,jpeg,bmp,gif,png,pcx,wmf,tga,psd,crw,cr2,nef,orf,raf,dng,mrw,pef,srf,arw,rw2,jp2,j2k,ppm,eps
+
 [Program7]
 Name=Imagine
 Path=%COMMANDER_PATH%\Plugins\wlx\Imagine\Imagine.exe
@@ -90,6 +107,7 @@ Mode=0
 Window=0
 Icon=%COMMANDER_PATH%\Plugins\wlx\Imagine\Imagine.exe,0
 Type=ani,anm,bmp,dib,rle,cdr,cdt,pat,ccx,cmx,clp,cur,dcx,dds,emf,flc,fli,gif,hdp,wdp,icl,ics,jp2,jpc,j2k,jpg,jpe,jpeg,lbm,iff,lbmp,mac,macp,mbm,mng,pbm,pcd,pcx,pgm,pic,cel,png,ppm,psd,8bps,psp,ras,rla,sgi,rgb,bw,spr,tga,tif,tiff,wbmp,wap,wbm,wmf,xbm,xcf,xpm
+
 [Program8]
 Name=SumatraPDF
 Path=%COMMANDER_PATH%\Plugins\wlx\slister\SumatraPDF.exe
@@ -100,6 +118,7 @@ Mode=0
 Window=0
 Icon=%COMMANDER_PATH%\Plugins\wlx\slister\SumatraPDF.exe,0
 Type=pdf,djvu,djv,xps,cbz,cbr,mobi,epub,fb2,pdb,tcr
+
 [Program9]
 Name=SynWrite
 Path=%COMMANDER_PATH%\Plugins\wlx\Syn2\Syn.exe
@@ -110,6 +129,7 @@ Mode=0
 Window=0
 Icon=%COMMANDER_PATH%\Plugins\wlx\Syn2\Syn.exe,0
 Type=txt,ini,cfg,log,nfo
+
 [Program10]
 Name=BurnAware
 Path=%COMMANDER_PATH%\Soft\BurnAware\BurnAware.exe
@@ -120,6 +140,7 @@ Mode=0
 Window=0
 Icon=%COMMANDER_PATH%\Soft\BurnAware\BurnAware.exe,0
 Type=bafl
+
 [Program11]
 Name=Firefox
 Path=%COMMANDER_PATH%\Soft\FirefoxPortable\FirefoxPortable.exe
@@ -130,6 +151,7 @@ Mode=0
 Window=0
 Icon=%COMMANDER_PATH%\Soft\FirefoxPortable\FirefoxPortable.exe,0
 Type=htm,shtm,html,shtml,mht,maff,url
+
 [Program12]
 Name=Download Master
 Path=%COMMANDER_PATH%\Soft\Download Master Portable\dmaster.exe
@@ -140,6 +162,7 @@ Mode=0
 Window=0
 Icon=%COMMANDER_PATH%\Soft\Download Master Portable\dmaster.exe,0
 Type=dmf
+
 [Program13]
 Name=uTorrent
 Path=%COMMANDER_PATH%\Soft\uTorrent\uTorrent.exe
@@ -150,6 +173,7 @@ Mode=0
 Window=0
 Icon=%COMMANDER_PATH%\Soft\uTorrent\uTorrent.exe,0
 Type=btapp,btinstall,btsearch,btskin,torrent
+
 [Program14]
 Name=UltraISO
 Path=%COMMANDER_PATH%\Soft\UltraISOPortable\UltraISOPortable.exe
@@ -160,3 +184,4 @@ Mode=0
 Window=0
 Icon=%COMMANDER_PATH%\Soft\UltraISOPortable\UltraISOPortable.exe,0
 Type=iso,isz,mds,mdf,nrg,ashdisc,ima,bif,flp
+
