--- a/wincmd.ini
+++ b/wincmd.ini
@@ -270,7 +270,6 @@
     CompareExtraLines=2
     CompareIgnoreRepeatedLines=1
     CompareIgnoreRepSpace=1
-    CompareIgnoreRepeatedLines=1
     CompareVertical=0
     CopyComments=6
     CopyDirsAsAdmin=2
@@ -286,7 +285,7 @@
     DriveLib=%COMMANDER_PATH%\Drives.dll
     DrivesShowUpcase=1
     EditWaitTime=-1
-    Editor=%COMMANDER_PATH%\Utilities\ChoiceEditor\ChoiceEditor.exe
+    Editor=Plugins\exe\tcEditRedirector\tcer.exe
     Everything=%COMMANDER_PATH%\Programs\Everything\Everything.bat
     ExplorerForCopy=0
     FileTipWindows=1
@@ -389,6 +388,7 @@
     Win32TipWindows=1
     Win95Delete=0
     X64DisableRedirection=0
+    UseEverything=1
 
 [Confirmation]
     deleteDirs=1
