--- a/Plugins/exe/F4Menu/F4Menu.ini
+++ b/Plugins/exe/F4Menu/F4Menu.ini
@@ -1,24 +1,23 @@
 [General]
-Count=16
+Count=15
 
 [Options]
 Cancelling=0
-DefMode=4097
+DefMode=1
 ;DefMode=6148
 Language=English
 MaxFiles=16
 Position=1
-RunMode=285474820
+RunMode=266496
 ShellMenu=0
-;ShellMenu=1
 Tooltips=18
 Unselect=1
 
 [Settings]
 ShowStyle=0
-WinPos=22676083
-WinSize=25428634
-Column=275,309,67,220,63,38,50,319,78,
+WinPos=9502845
+WinSize=27592161
+Column=275,309,67,220,63,38,50,325,352,
 
 [Program0]
 Name=Notepad++
@@ -29,7 +28,7 @@ Main=0
 Mode=0
 Window=0
 Icon=%ProgramFiles(x86)%\Notepad++\notepad++.exe,0
-Type=as,asp,bsh,c,cc,cpp,cs,css,cxx,f,f2k,f90,f95,for,h,hpp,htm,html,hxx,inc,ini,java,js,jsp,log,lua,m,mak,manifest,mx,nfo,nsh,nsi,pas,php,phtml,pl,pm,py,rc,sh,sql,tex,txt,vb,vbs,xml
+Type=as, asp, bak, bsh, c, cc, cpp, cs, css, cxx, f, f2k, f90, f95, for, h, hpp, htm, html, hxx, inc, ini, java, js, jsp, log, lua, m, mak, manifest, mx, nfo, nsh, nsi, pas, php, phtml, pl, pm, py, rc, sh, sql, tex, txt, vb, vbs, xml
 
 [Program1]
 Name=TextMaker
@@ -73,7 +72,7 @@ Main=0
 Mode=0
 Window=0
 Icon=%COMMANDER_PATH%\Soft\PotPlayer\PotPlayerMini.exe,0
-Type=avi,divx,asf,asx,wm,wmp,wmv,wmx,wvx,m1v,m2v,mpe,mpeg,mpg,tp,ifo,vob,ogm,mkv,rm,rmvb,mov,mqv,mp4,m4v,lmp4,3gp,k3g,skm,dmskm,flv,ts,trp,nsr,mpv2,mp2v,tpr,ogv,m4p,m4b,3gpp,3g2,3gp2,ram,rpm,qt,nsv,dpg,m2ts,m2t,mts,dvr-ms,evo,amv,webm,bik,mxf,wav,wma,mpa,mp2,m1a,m2a,mp3,ogg,m4a,aac,mka,ra,flac,ape,mpc,mod,ac3,dts,wv,tak,asx,m3u,pls,wvx,wax,wmx,cue,mpls,dpl
+Type=avi, divx, asf, asx, wm, wmp, wmv, wmx, wvx, m1v, m2v, mpe, mpeg, mpg, tp, ifo, vob, ogm, mkv, rm, rmvb, mov, mqv, mp4, m4v, lmp4, 3gp, k3g, skm, dmskm, flv, ts, trp, nsr, mpv2, mp2v, tpr, ogv, m4p, m4b, 3gpp, 3g2, 3gp2, ram, rpm, qt, nsv, dpg, m2ts, m2t, mts, dvr-ms, evo, amv, webm, bik, mxf, wav, wma, mpa, mp2, m1a, m2a, mp3, ogg, m4a, aac, mka, ra, flac, ape, mpc, mod, ac3, dts, wv, tak, asx, m3u, pls, wvx, wax, wmx, cue, mpls, dpl
 
 [Program5]
 Name=AIMP3
@@ -84,17 +83,17 @@ Main=0
 Mode=0
 Window=0
 Icon=%COMMANDER_PATH%\Soft\AIMP3\AIMP3.exe,0
-Type=aac,ac3,ape,cda,fla,flac,it,kar,m4a,m4b,mac,mo3,mod,mp+,mp1,mp2,mp3,mpc,mpp,mtm,ofr,ofs,oga,ogg,rmi,s3m,spx,tak,tta,umx,wav,wma,wv,xm,aimppl,asx,cue,m3u,m3u8,plc,pls,wax,xspf,acs2,acs3
+Type=aac, ac3, ape, cda, fla, flac, it, kar, m4a, m4b, mac, mo3, mod, mp+, mp1, mp2, mp3, mpc, mpp, mtm, ofr, ofs, oga, ogg, rmi, s3m, spx, tak, tta, umx, wav, wma, wv, xm, aimppl, asx, cue, m3u, m3u8, plc, pls, wax, xspf, acs2, acs3
 
 [Program6]
 Name=FSViewer
-Path=%COMMANDER_PATH%\Soft\FSViewer\FSViewer.exe
+Path=%ProgramFiles(x86)%\FastStone Image Viewer\FSViewer.exe
 Param=
-Start=%COMMANDER_PATH%\Soft\FSViewer\
+Start=%ProgramFiles(x86)%\FastStone Image Viewer\
 Main=0
 Mode=0
 Window=0
-Icon=%COMMANDER_PATH%\Soft\FSViewer\FSViewer.exe,0
+Icon="%ProgramFiles(x86)%\FastStone Image Viewer\FSViewer.exe",0
 Type=jpg,jpe,jpeg,bmp,gif,png,pcx,wmf,tga,psd,crw,cr2,nef,orf,raf,dng,mrw,pef,srf,arw,rw2,jp2,j2k,ppm,eps
 
 [Program7]
@@ -106,7 +105,7 @@ Main=0
 Mode=0
 Window=0
 Icon=%COMMANDER_PATH%\Plugins\wlx\Imagine\Imagine.exe,0
-Type=ani,anm,bmp,dib,rle,cdr,cdt,pat,ccx,cmx,clp,cur,dcx,dds,emf,flc,fli,gif,hdp,wdp,icl,ics,jp2,jpc,j2k,jpg,jpe,jpeg,lbm,iff,lbmp,mac,macp,mbm,mng,pbm,pcd,pcx,pgm,pic,cel,png,ppm,psd,8bps,psp,ras,rla,sgi,rgb,bw,spr,tga,tif,tiff,wbmp,wap,wbm,wmf,xbm,xcf,xpm
+Type=ani, anm, bmp, dib, rle, cdr, cdt, pat, ccx, cmx, clp, cur, dcx, dds, emf, flc, fli, gif, hdp, wdp, icl, ics, jp2, jpc, j2k, jpg, jpe, jpeg, lbm, iff, lbmp, mac, macp, mbm, mng, pbm, pcd, pcx, pgm, pic, cel, png, ppm, psd, 8bps, psp, ras, rla, sgi, rgb, bw, spr, tga, tif, tiff, wbmp, wap, wbm, wmf, xbm, xcf, xpm
 
 [Program8]
 Name=SumatraPDF
@@ -176,12 +175,12 @@ Type=btapp,btinstall,btsearch,btskin,torrent
 
 [Program14]
 Name=UltraISO
-Path=%COMMANDER_PATH%\Soft\UltraISOPortable\UltraISOPortable.exe
+Path=%COMMANDER_PATH%\Programs\cd-dvd\UltraISO\UltraISO.exe
 Param=
-Start=%COMMANDER_PATH%\Soft\UltraISOPortable\
+Start=%COMMANDER_PATH%\Programs\cd-dvd\UltraISO\
 Main=0
 Mode=0
 Window=0
-Icon=%COMMANDER_PATH%\Soft\UltraISOPortable\UltraISOPortable.exe,0
+Icon=%COMMANDER_PATH%\Programs\cd-dvd\UltraISO\UltraISO.exe,0
 Type=iso,isz,mds,mdf,nrg,ashdisc,ima,bif,flp
 
