TC: F4Menu Final; add Commands Help

--- a/wincmd.ini
+++ b/wincmd.ini
@@ -285,7 +285,7 @@
     DriveLib=%COMMANDER_PATH%\Drives.dll
     DrivesShowUpcase=1
     EditWaitTime=-1
-    Editor=Plugins\exe\tcEditRedirector\tcer.exe
+    Editor=Plugins\exe\f4menu\f4menu.exe
     Everything=%COMMANDER_PATH%\Programs\Everything\Everything.bat
     ExplorerForCopy=0
     FileTipWindows=1
