--- a/Plugins/exe/F4Menu/F4Menu.ini
+++ b/Plugins/exe/F4Menu/F4Menu.ini
@@ -1,5 +1,5 @@
 [General]
-Count=15
+Count=16
 
 [Options]
 Cancelling=0
@@ -20,6 +20,17 @@ WinSize=27592161
 Column=275,309,67,220,63,38,50,325,352,
 
 [Program0]
+Name=
+Path=
+Param=
+Start=
+Main=0
+Mode=0
+Window=0
+Icon=
+Type=
+
+[Program1]
 Name=Notepad++
 Path=%ProgramFiles(x86)%\Notepad++\notepad++.exe
 Param=
@@ -28,64 +39,64 @@ Main=0
 Mode=0
 Window=0
 Icon=%ProgramFiles(x86)%\Notepad++\notepad++.exe,0
-Type=as, asp, bak, bsh, c, cc, cpp, cs, css, cxx, f, f2k, f90, f95, for, h, hpp, htm, html, hxx, inc, ini, java, js, jsp, log, lua, m, mak, manifest, mx, nfo, nsh, nsi, pas, php, phtml, pl, pm, py, rc, sh, sql, tex, txt, vb, vbs, xml
-
-[Program1]
-Name=TextMaker
-Path=%COMMANDER_PATH%\Soft\SoftMaker Office 2012\TextMaker.exe
-Param=
-Start=%COMMANDER_PATH%\Soft\SoftMaker Office 2012\
-Main=0
-Mode=0
-Window=0
-Icon=%COMMANDER_PATH%\Soft\SoftMaker Office 2012\TextMaker.exe,0
-Type=tmd,tmv,doc,docx,docm,dot,dotx,dotm,odt,ott,sxw,rtf,psw,pwd
+Type=as, asp, bak, bsh, c, cc, cpp, cs, css, cxx, f, f2k, f90, f95, for, h, hpp, htm, html, hxx, inc, ini, java, js, jsp, log, lua, m, mak, manifest, mx, nfo, nsh, nsi, pas, php, phtml, pl, pm, py, rc, sh, sql, tex, txt, vb, vbs, xml,MNU,
 
 [Program2]
-Name=PlanMaker
-Path=%COMMANDER_PATH%\Soft\SoftMaker Office 2012\PlanMaker.exe
+Name=TextMaker
+Path=%COMMANDER_PATH%\Programs\Text\SoftMakerOffice\TextMaker.exe
 Param=
-Start=%COMMANDER_PATH%\Soft\SoftMaker Office 2012\
+Start=%COMMANDER_PATH%\Programs\Text\SoftMakerOffice\
 Main=0
 Mode=0
 Window=0
-Icon=%COMMANDER_PATH%\Soft\SoftMaker Office 2012\PlanMaker.exe,0
-Type=pmd,pmv,xls,xlsx,xlsm,xlt,xltx,xltm,pmw,sdc,slk
+Icon=%COMMANDER_PATH%\Programs\Text\SoftMakerOffice\TextMaker.exe,0
+Type=tmd,tmv,doc,docx,docm,dot,dotx,dotm,odt,ott,sxw,rtf,psw,pwd
 
 [Program3]
-Name=Presentations
-Path=%COMMANDER_PATH%\Soft\SoftMaker Office 2012\Presentations.exe
+Name=PlanMaker
+Path=%COMMANDER_PATH%\Programs\Text\SoftMakerOffice\PlanMaker.exe
 Param=
-Start=%COMMANDER_PATH%\Soft\SoftMaker Office 2012\
+Start=%COMMANDER_PATH%\Programs\Text\SoftMakerOffice\
 Main=0
 Mode=0
 Window=0
-Icon=%COMMANDER_PATH%\Soft\SoftMaker Office 2012\Presentations.exe,0
-Type=prd,prs,prv,ppt,pptx,pptm,pps,ppsx,ppsm,pot,potx,potm
+Icon=%COMMANDER_PATH%\Programs\Text\SoftMakerOffice\PlanMaker.exe,0
+Type=pmd,pmv,xls,xlsx,xlsm,xlt,xltx,xltm,pmw,sdc,slk
 
 [Program4]
-Name=PotPlayer
-Path=%COMMANDER_PATH%\Soft\PotPlayer\PotPlayerMini.exe
+Name=Presentations
+Path=%COMMANDER_PATH%\Programs\Text\SoftMakerOffice\Presentations.exe
 Param=
-Start=%COMMANDER_PATH%\Soft\PotPlayer\
+Start=%COMMANDER_PATH%\Programs\Text\SoftMakerOffice\
 Main=0
 Mode=0
 Window=0
-Icon=%COMMANDER_PATH%\Soft\PotPlayer\PotPlayerMini.exe,0
-Type=avi, divx, asf, asx, wm, wmp, wmv, wmx, wvx, m1v, m2v, mpe, mpeg, mpg, tp, ifo, vob, ogm, mkv, rm, rmvb, mov, mqv, mp4, m4v, lmp4, 3gp, k3g, skm, dmskm, flv, ts, trp, nsr, mpv2, mp2v, tpr, ogv, m4p, m4b, 3gpp, 3g2, 3gp2, ram, rpm, qt, nsv, dpg, m2ts, m2t, mts, dvr-ms, evo, amv, webm, bik, mxf, wav, wma, mpa, mp2, m1a, m2a, mp3, ogg, m4a, aac, mka, ra, flac, ape, mpc, mod, ac3, dts, wv, tak, asx, m3u, pls, wvx, wax, wmx, cue, mpls, dpl
+Icon=%COMMANDER_PATH%\Programs\Text\SoftMakerOffice\Presentations.exe,0
+Type=prd,prs,prv,ppt,pptx,pptm,pps,ppsx,ppsm,pot,potx,potm
 
 [Program5]
-Name=AIMP3
-Path=%COMMANDER_PATH%\Soft\AIMP3\AIMP3.exe
+Name=PotPlayer
+Path=%COMMANDER_PATH%\Programs\Players\PotPlayer\PotPlayerMini.exe
 Param=
-Start=%COMMANDER_PATH%\Soft\AIMP3\
+Start=%COMMANDER_PATH%\Programs\Players\PotPlayer\
 Main=0
 Mode=0
 Window=0
-Icon=%COMMANDER_PATH%\Soft\AIMP3\AIMP3.exe,0
-Type=aac, ac3, ape, cda, fla, flac, it, kar, m4a, m4b, mac, mo3, mod, mp+, mp1, mp2, mp3, mpc, mpp, mtm, ofr, ofs, oga, ogg, rmi, s3m, spx, tak, tta, umx, wav, wma, wv, xm, aimppl, asx, cue, m3u, m3u8, plc, pls, wax, xspf, acs2, acs3
+Icon=%COMMANDER_PATH%\Programs\Players\PotPlayer\PotPlayerMini.exe,0
+Type=avi, divx, asf, asx, wm, wmp, wmv, wmx, wvx, m1v, m2v, mpe, mpeg, mpg, tp, ifo, vob, ogm, mkv, rm, rmvb, mov, mqv, mp4, m4v, lmp4, 3gp, k3g, skm, dmskm, flv, ts, trp, nsr, mpv2, mp2v, tpr, ogv, m4p, m4b, 3gpp, 3g2, 3gp2, ram, rpm, qt, nsv, dpg, m2ts, m2t, mts, dvr-ms, evo, amv, webm, bik, mxf, wav, wma, mpa, mp2, m1a, m2a, mp3, ogg, m4a, aac, mka, ra, flac, ape, mpc, mod, ac3, dts, wv, tak, asx, m3u, pls, wvx, wax, wmx, cue, mpls, dpl
 
 [Program6]
+Name=AIMP3
+Path=%COMMANDER_PATH%\Programs\Players\AIMP\AIMP.exe
+Param=
+Start=%COMMANDER_PATH%\Programs\Players\AIMP\
+Main=0
+Mode=0
+Window=0
+Icon=%COMMANDER_PATH%\Programs\Players\AIMP\AIMP.exe,0
+Type=aac, ac3, ape, cda, fla, flac, it, kar, m4a, m4b, mac, mo3, mod, mp+, mp1, mp2, mp3, mpc, mpp, mtm, ofr, ofs, oga, ogg, rmi, s3m, spx, tak, tta, umx, wav, wma, wv, xm, aimppl, asx, cue, m3u, m3u8, plc, pls, wax, xspf, acs2, acs3
+
+[Program7]
 Name=FSViewer
 Path=%ProgramFiles(x86)%\FastStone Image Viewer\FSViewer.exe
 Param=
@@ -93,10 +104,10 @@ Start=%ProgramFiles(x86)%\FastStone Image Viewer\
 Main=0
 Mode=0
 Window=0
-Icon="%ProgramFiles(x86)%\FastStone Image Viewer\FSViewer.exe",0
+Icon=%ProgramFiles(x86)%\FastStone Image Viewer\FSViewer.exe,0
 Type=jpg,jpe,jpeg,bmp,gif,png,pcx,wmf,tga,psd,crw,cr2,nef,orf,raf,dng,mrw,pef,srf,arw,rw2,jp2,j2k,ppm,eps
 
-[Program7]
+[Program8]
 Name=Imagine
 Path=%COMMANDER_PATH%\Plugins\wlx\Imagine\Imagine.exe
 Param=
@@ -107,7 +118,7 @@ Window=0
 Icon=%COMMANDER_PATH%\Plugins\wlx\Imagine\Imagine.exe,0
 Type=ani, anm, bmp, dib, rle, cdr, cdt, pat, ccx, cmx, clp, cur, dcx, dds, emf, flc, fli, gif, hdp, wdp, icl, ics, jp2, jpc, j2k, jpg, jpe, jpeg, lbm, iff, lbmp, mac, macp, mbm, mng, pbm, pcd, pcx, pgm, pic, cel, png, ppm, psd, 8bps, psp, ras, rla, sgi, rgb, bw, spr, tga, tif, tiff, wbmp, wap, wbm, wmf, xbm, xcf, xpm
 
-[Program8]
+[Program9]
 Name=SumatraPDF
 Path=%COMMANDER_PATH%\Plugins\wlx\slister\SumatraPDF.exe
 Param=
@@ -118,7 +129,7 @@ Window=0
 Icon=%COMMANDER_PATH%\Plugins\wlx\slister\SumatraPDF.exe,0
 Type=pdf,djvu,djv,xps,cbz,cbr,mobi,epub,fb2,pdb,tcr
 
-[Program9]
+[Program10]
 Name=SynWrite
 Path=%COMMANDER_PATH%\Plugins\wlx\Syn2\Syn.exe
 Param=
@@ -129,51 +140,51 @@ Window=0
 Icon=%COMMANDER_PATH%\Plugins\wlx\Syn2\Syn.exe,0
 Type=txt,ini,cfg,log,nfo
 
-[Program10]
+[Program11]
 Name=BurnAware
-Path=%COMMANDER_PATH%\Soft\BurnAware\BurnAware.exe
+Path=%COMMANDER_PATH%\Programs\Cd-Dvd\BurnAware\App\BurnAware\BurnAware.exe
 Param=
-Start=%COMMANDER_PATH%\Soft\BurnAware\
+Start=%COMMANDER_PATH%\Programs\Cd-Dvd\BurnAware\App\BurnAware\
 Main=0
 Mode=0
 Window=0
-Icon=%COMMANDER_PATH%\Soft\BurnAware\BurnAware.exe,0
+Icon=%COMMANDER_PATH%\Programs\Cd-Dvd\BurnAware\App\BurnAware\BurnAware.exe,0
 Type=bafl
 
-[Program11]
+[Program12]
 Name=Firefox
-Path=%COMMANDER_PATH%\Soft\FirefoxPortable\FirefoxPortable.exe
+Path=%PROGRAMW6432%\Mozilla Firefox\firefox.exe
 Param=
-Start=%COMMANDER_PATH%\Soft\FirefoxPortable\
+Start=%PROGRAMW6432%\Mozilla Firefox\
 Main=0
 Mode=0
 Window=0
-Icon=%COMMANDER_PATH%\Soft\FirefoxPortable\FirefoxPortable.exe,0
+Icon=%PROGRAMW6432%\Mozilla Firefox\firefox.exe,0
 Type=htm,shtm,html,shtml,mht,maff,url
 
-[Program12]
+[Program13]
 Name=Download Master
-Path=%COMMANDER_PATH%\Soft\Download Master Portable\dmaster.exe
+Path=%COMMANDER_PATH%\Programs\Internet\Download Master Portable\dmaster.exe
 Param=
-Start=%COMMANDER_PATH%\Soft\Download Master Portable\
+Start=%COMMANDER_PATH%\Programs\Internet\Download Master Portable\
 Main=0
 Mode=0
 Window=0
-Icon=%COMMANDER_PATH%\Soft\Download Master Portable\dmaster.exe,0
+Icon=%COMMANDER_PATH%\Programs\Internet\Download Master Portable\dmaster.exe,0
 Type=dmf
 
-[Program13]
+[Program14]
 Name=uTorrent
-Path=%COMMANDER_PATH%\Soft\uTorrent\uTorrent.exe
+Path=%COMMANDER_PATH%\Programs\Internet\uTorrent\uTorrent.exe
 Param=
-Start=%COMMANDER_PATH%\Soft\uTorrent\
+Start=%COMMANDER_PATH%\Programs\Internet\uTorrent\
 Main=0
 Mode=0
 Window=0
-Icon=%COMMANDER_PATH%\Soft\uTorrent\uTorrent.exe,0
+Icon=%COMMANDER_PATH%\Programs\Internet\uTorrent\uTorrent.exe,0
 Type=btapp,btinstall,btsearch,btskin,torrent
 
-[Program14]
+[Program15]
 Name=UltraISO
 Path=%COMMANDER_PATH%\Programs\cd-dvd\UltraISO\UltraISO.exe
 Param=
@@ -183,4 +194,3 @@ Mode=0
 Window=0
 Icon=%COMMANDER_PATH%\Programs\cd-dvd\UltraISO\UltraISO.exe,0
 Type=iso,isz,mds,mdf,nrg,ashdisc,ima,bif,flp
-
