TC: full merge work&home forks

--- a/wincmd.ini
+++ b/wincmd.ini
@@ -377,6 +377,7 @@
     Tips=3
     TrayIcon=0
     ttciniwritable=57689
+    UseEverything=1
     UseIniInProgramDir=7
     UseLongNames=1
     UseNewDefFont=0
@@ -388,7 +389,6 @@
     Win32TipWindows=1
     Win95Delete=0
     X64DisableRedirection=0
-    UseEverything=1
 
 [Confirmation]
     deleteDirs=1
@@ -480,15 +480,24 @@
 [DriveHints]
     
 [FileSystemPlugins]
-    Environment Variables Ex=D:\Downloads\wfx_envvars_1.0a\envvars.wfx
+    DiskInternals Reader=%COMMANDER_PATH%\Plugins\wfx\DiskInternals_Reader\DiskInternals_Reader.wfx
+    Environment Variables Ex=%COMMANDER_PATH%\Plugins\wfx\EnvVars\envvars.wfx
+    Registry=%COMMANDER_PATH%\Plugins\wfx\Registry\Registry.wfx
     Secure FTP=%COMMANDER_PATH%\Plugins\WFX\sftpplug\sftpplug.wfx
-
+    Services2=%COMMANDER_PATH%\Plugins\wfx\Services2\Services2.wfx
+    Startups=%COMMANDER_PATH%\Plugins\wfx\Startups\Startups.wfx
+    WebDAV=%COMMANDER_PATH%\Plugins\wfx\webdav\davplug.wfx
 
 [FileSystemPlugins64]
-    $checksum$=3363122962
+    $checksum$=3021121873
+    DiskInternals Reader=1
     Environment Variables Ex=1
+    Registry=1
     Secure FTP=1
-    
+    Services2=1
+    Startups=1
+    WebDAV=1
+
 [Layout]
     DriveBar1=1
     DriveBar2=1
