Sync work and home

--- a/wincmd.ini
+++ b/wincmd.ini
@@ -480,22 +480,28 @@
 [DriveHints]
     
 [FileSystemPlugins]
+    ADB=%COMMANDER_PATH%\Plugins\wfx\ADB\ADBPlugin.wfx
+    CloudWFX=%COMMANDER_PATH%\Plugins\wfx\cloudwfx\CloudWFX.wfx
     DiskInternals Reader=%COMMANDER_PATH%\Plugins\wfx\DiskInternals_Reader\DiskInternals_Reader.wfx
     Environment Variables Ex=%COMMANDER_PATH%\Plugins\wfx\EnvVars\envvars.wfx
     Registry=%COMMANDER_PATH%\Plugins\wfx\Registry\Registry.wfx
     Secure FTP=%COMMANDER_PATH%\Plugins\WFX\sftpplug\sftpplug.wfx
     Services2=%COMMANDER_PATH%\Plugins\wfx\Services2\Services2.wfx
     Startups=%COMMANDER_PATH%\Plugins\wfx\Startups\Startups.wfx
+    Task manager=%COMMANDER_PATH%\Plugins\wfx\DiskInternals_procfs\procfs.wfx
     WebDAV=%COMMANDER_PATH%\Plugins\wfx\webdav\davplug.wfx
 
 [FileSystemPlugins64]
     $checksum$=3021121873
+    ADB=1
+    CloudWFX=1
     DiskInternals Reader=1
     Environment Variables Ex=1
     Registry=1
     Secure FTP=1
     Services2=1
     Startups=1
+    Task manager=1
     WebDAV=1
 
 [Layout]
@@ -563,6 +569,8 @@
     10=%COMMANDER_PATH%\plugins\wcx\Total7zip\Total7zip.wcx
     10_detect=EXT="7Z"|EXT="CAB"|EXT="ISO"|EXT="MSI"|EXT="RAR"|EXT="ZIP"
     11=%COMMANDER_PATH%\Plugins\wlx\HTMLView\HTMLView.wlx
+    12=%COMMANDER_PATH%\Plugins\wlx\ulister\ulister.wlx
+    12_detect=
 
 [ListerPlugins64]
     $checksum$=69172811
@@ -572,6 +580,7 @@
     6=1
     10=1
     11=1
+    12=1
 
 [MkDirHistory]
     RedirectSection=%COMMANDER_PATH%\ini\History.ini
