--- a/wincmd.ini
+++ b/wincmd.ini
@@ -729,6 +729,9 @@
     {Изображения}>Дата съёмки D.M.Y__h-m-s__Размеры_ext=[E]
     {Изображения}>Дата съёмки D.M.Y__h-m-s__Размеры_params=0|1|1|1
     
+[RenameSearchFind]
+    RedirectSection=%COMMANDER_PATH%\ini\History.ini
+
 [RenameSearchReplace]
     RedirectSection=%COMMANDER_PATH%\ini\History.ini
     
