add English menu files for Windows 10

--- a/wincmd.ini
+++ b/wincmd.ini
@@ -81,6 +81,10 @@
     CompareMax=1
     CompareX=108
     CompareY=22
+    CompCharSet=204
+    CompFontName=InputMono
+    CompFontsize=10
+    CompFontStyle=400
     ConnectDX=485
     ConnectDY=370
     ConnectMax=0
@@ -99,6 +103,9 @@
     DriveSelMax=0
     DriveSelX=156
     DriveSelY=35
+    dx=1557
+    dy=851
+    FontCharset=204
     FontCharsetDialog=204
     FontCharsetWindow=204
     FontName=Fira Sans Extra Condensed
@@ -108,8 +115,10 @@
     FontSizeDialog=10
     FontSizeWindow=11
     FontWeight=400
+    FontWeightDialog=300
     FontWeightWindow=400
     Iconsize32=16
+    maximized=1
     MenuChangeDX=1440
     MenuChangeDY=767
     MenuChangeMax=0
@@ -148,17 +157,8 @@
     TreeDlgMax=0
     TreeDlgX=702
     TreeDlgY=376
-    dx=1557
-    dy=851
-    maximized=1
     x=195
     y=196
-    FontCharset=204
-    FontWeightDialog=300
-    CompFontName=InputMono
-    Compfontsize=10
-    CompCharSet=204
-    CompFontStyle=400
 
 [Associations]
     RedirectSection=%COMMANDER_PATH%\ini\Associations.ini
@@ -233,7 +233,19 @@
     IconDll_m_Copy_bitrate.bar=
     IconDll_User_Bar.bar=
     IconDll_TA_TCIMG.bar=
-    
+    IconDll_win10amd64_1_eng.bar=
+    IconDll_win10amd64_4_eng.bar=
+    IconDll_win10amd64_5_eng.bar=
+    IconDll_win10amd64_1f_eng.bar=
+    IconDll_win10amd64_1c_eng.bar=
+    IconDll_win10amd64_1j_eng.bar=
+    IconDll_win10amd64_1g_eng.bar=
+    IconDll_win10amd64_1k_eng.bar=
+    IconDll_win10amd64_1b_eng.bar=
+    IconDll_win10amd64_1h_eng.bar=
+    IconDll_win10amd64_2_eng.bar=
+    IconDll_win10amd64_1a_eng.bar=
+
 [ButtonbarVertical]
     Buttonbar=%COMMANDER_PATH%\Bar\VERTICAL.BAR
     Buttonheight=21
@@ -254,6 +266,7 @@
     AdminShares=1
     AdminTimeout=0
     Aligned extension=0
+    AlternateUserIni=
     AltSearch=3
     AlwaysAsAdmin=1
     AlwaysCopyInBackground=1
@@ -275,6 +288,7 @@
     CopyDirsAsAdmin=2
     CountMarked=0
     CountSpace=1
+    CrcAppendExt=1
     CrcSeparateFiles=0
     CrcSeparateFolders=0
     DirBrackets=0
@@ -303,18 +317,19 @@
     IconsInMenus=17
     IconsOnNet=1
     IconsSpecialFolders=3
+    IgnoreLinks=1
     IgnoreListFile=%COMMANDER_PATH%\ini\tcignore.txt
     IgnoreListFileEnabled=1
     InactiveFocus=1
     InactiveFocus=7777777
-    LanguageIni=WCMD_RUS.LNG
+    LanguageIni=wcmd_win10amd64_1_eng.lng
     LastRunAs=
     LastSearchOptions=32
     Lastmd5=1
     LogKeepCount=30
     LogOptions=7198
     LogRotateLimit=0
-    Mainmenu=WCMD_RUS.mnu
+    Mainmenu=wcmd_win10amd64_1_eng.mnu
     MarkDirectories=1
     MinIconWidth=-2
     MinLineHeight=-1
@@ -360,7 +375,6 @@
     SyncFlags=1
     TabDir=%COMMANDER_PATH%\Files\Tab
     TabEnterDirChange=1
-    test=17
     ThumbExplTypes=*.* | *.htm *.html
     ThumbHeightNoCache=80
     ThumbIrfXnTypes=*.*
@@ -399,26 +413,28 @@
     
 [ContentPlugins]
     0=%COMMANDER_PATH%\Plugins\wdx\autorun\Autorun.wdx
+    0_date=1086393160
+    0_detect=
+    0_flags=0
     1=%COMMANDER_PATH%\Plugins\wdx\wdx_mediainfo\TCMediaInfo.wdx
+    1_date=1123711175
+    1_detect=
+    1_flags=0
     2=%COMMANDER_PATH%\Plugins\wdx\ShellDetails\ShellDetails.wdx
+    2_date=1189658413
+    2_detect=
+    2_flags=0
     3=%COMMANDER_PATH%\Plugins\wdx\wdx_exif\exif.wdx
     3_detect=EXT="JPG" | EXT="JPEG" | EXT="TIFF" | EXT="TIF" | EXT="JPE" | EXT="CRW" | EXT="THM" | EXT="CR2" | EXT="DNG" | EXT="NEF"
     4=%COMMANDER_PATH%\Plugins\wdx\wdx_EncInfo\EncInfo.wdx
-    5=%COMMANDER_PATH%\Plugins\wdx\wdx_dirsizecalc_2.22\DirSizeCalc.wdx
-    0_detect=
-    1_detect=
-    2_detect=
+    4_date=1129384151
     4_detect=
-    5_detect=
-    4_date=1129382102
     4_flags=0
-    2_date=1189656365
-    2_flags=0
-    1_date=1123709127
-    1_flags=0
+    5=%COMMANDER_PATH%\Plugins\wdx\wdx_dirsizecalc_2.22\DirSizeCalc.wdx
     5_date=1192297072
+    5_detect=
     5_flags=14
-    
+
 [ContentPlugins64]
     $checksum$=3774793902
     0=1
@@ -479,13 +495,17 @@
 
 [DriveHints]
     
+[Extensions]
+
 [FileSystemPlugins]
     ADB=%COMMANDER_PATH%\Plugins\wfx\ADB\ADBPlugin.wfx
     CloudWFX=%COMMANDER_PATH%\Plugins\wfx\cloudwfx\CloudWFX.wfx
     DiskInternals Reader=%COMMANDER_PATH%\Plugins\wfx\DiskInternals_Reader\DiskInternals_Reader.wfx
     Environment Variables Ex=%COMMANDER_PATH%\Plugins\wfx\EnvVars\envvars.wfx
+    NTFS - streams=%COMMANDER_PATH%\Plugins\wfx\NTFSFileStreams\wfx_FileStreams.wfx
     Registry=%COMMANDER_PATH%\Plugins\wfx\Registry\Registry.wfx
     Secure FTP=%COMMANDER_PATH%\Plugins\WFX\sftpplug\sftpplug.wfx
+    Secure FTP Connections=%COMMANDER_PATH%\Plugins\wfx\sftp4tc\plugin_sftp.wfx
     Services2=%COMMANDER_PATH%\Plugins\wfx\Services2\Services2.wfx
     Startups=%COMMANDER_PATH%\Plugins\wfx\Startups\Startups.wfx
     Task manager=%COMMANDER_PATH%\Plugins\wfx\DiskInternals_procfs\procfs.wfx
@@ -497,12 +517,18 @@
     CloudWFX=1
     DiskInternals Reader=1
     Environment Variables Ex=1
+    NTFS - streams=1
     Registry=1
     Secure FTP=1
+    Secure FTP Connections=1
     Services2=1
     Startups=1
     Task manager=1
     WebDAV=1
+
+[HintsCustomField]
+
+[IgnoreMenuExtensions]
 
 [Layout]
     DriveBar1=1
@@ -554,24 +580,23 @@
     1_detect=MULTIMEDIA
     2=%COMMANDER_PATH%\Plugins\wlx\sLister\sLister.wlx
     2_detect=MULTIMEDIA& (EXT="PDF" | EXT="DJVU" | EXT="DJV"| EXT="XPS" | EXT="CBZ" | EXT="CBR" )
-    3=%COMMANDER_PATH%\Plugins\wlx\LinkInfo\LinkInfo.wlx
-    3_detect=force | (ext="LNK")
-    4=%COMMANDER_PATH%\Plugins\wlx\ICLView\ICLView.wlx
-    4_detect=MULTIMEDIA & (ext="DLL" | ext="EXE" | ext="ICL" | ext="ICL32" | ext="ICO" | size=0 | force)
-    5=%COMMANDER_PATH%\Plugins\wlx\FileInfo\FileInfo.wlx
-    6=%COMMANDER_PATH%\Plugins\wlx\wlx_wdx_installer\TCTorrent.wlx
-    6_detect=EXT="TORRENT"
-    7=%COMMANDER_PATH%\Plugins\wlx\wlx_inied_1.2\IniEd.wlx
-    7_detect=ext="INI"|ext="INF"|ext="REG"|ext="URL"|ext="TXT"|ext="BAR"|ext="MNU"|ext="LNG"
-    8=%COMMANDER_PATH%\Plugins\wlx\Font\Font.wlx
-    8_detect=ext="TTF"|ext="TTC"|ext="OTF"|ext="FON"|ext="PFM"
-    9=%COMMANDER_PATH%\Plugins\wlx\ArchView\ArchView.wlx
-    10=%COMMANDER_PATH%\plugins\wcx\Total7zip\Total7zip.wcx
-    10_detect=EXT="7Z"|EXT="CAB"|EXT="ISO"|EXT="MSI"|EXT="RAR"|EXT="ZIP"
-    11=%COMMANDER_PATH%\Plugins\wlx\HTMLView\HTMLView.wlx
-    12=%COMMANDER_PATH%\Plugins\wlx\ulister\ulister.wlx
-    12_detect=
-
+    3=%COMMANDER_PATH%\Plugins\wlx\ulister\ulister.wlx64
+    4=%COMMANDER_PATH%\Plugins\wlx\LinkInfo\LinkInfo.wlx
+    4_detect=force | (ext="LNK")
+    5=%COMMANDER_PATH%\Plugins\wlx\ICLView\ICLView.wlx
+    5_detect=MULTIMEDIA & (ext="DLL" | ext="EXE" | ext="ICL" | ext="ICL32" | ext="ICO" | size=0 | force)
+    6=%COMMANDER_PATH%\Plugins\wlx\FileInfo\FileInfo.wlx
+    7=%COMMANDER_PATH%\Plugins\wlx\wlx_wdx_installer\TCTorrent.wlx
+    7_detect=EXT="TORRENT"
+    8=%COMMANDER_PATH%\Plugins\wlx\wlx_inied_1.2\IniEd.wlx
+    8_detect=ext="INI"|ext="INF"|ext="REG"|ext="URL"|ext="TXT"|ext="BAR"|ext="MNU"|ext="LNG"
+    9=%COMMANDER_PATH%\Plugins\wlx\Font\Font.wlx
+    9_detect=ext="TTF"|ext="TTC"|ext="OTF"|ext="FON"|ext="PFM"
+    10=%COMMANDER_PATH%\Plugins\wlx\ArchView\ArchView.wlx
+    11=%COMMANDER_PATH%\plugins\wcx\Total7zip\Total7zip.wcx
+    11_detect=EXT="7Z"|EXT="CAB"|EXT="ISO"|EXT="MSI"|EXT="RAR"|EXT="ZIP"
+    12=%COMMANDER_PATH%\Plugins\wlx\HTMLView\HTMLView.wlx
+    13=%COMMANDER_PATH%\Plugins\wlx\ulister\ulister.wlx
 [ListerPlugins64]
     $checksum$=69172811
     1=1
@@ -585,6 +610,8 @@
 [MkDirHistory]
     RedirectSection=%COMMANDER_PATH%\ini\History.ini
     
+[OverwriteCustomField]
+
 [Packer]
     LzmaAllowed=1
     ARJlongnames=1
@@ -614,52 +641,53 @@
     LastUsedPacker64=10000
     
 [PackerPlugins]
-    7z=735,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
-    001=734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
-    cab=734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
-    iso=734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
-    xz=734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
-    txz=734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
-    lzma=734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
-    cpio=734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
-    bz2=734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
-    bzip2=734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
-    tbz2=734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
-    tbz=734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
-    gzip=734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
-    tpz=734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
-    z=734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
-    taz=734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
-    lzh=734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
-    lha=734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
-    rpm=734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
-    deb=734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
-    arj=734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
-    vhd=734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
-    wim=735,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
-    swm=734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
-    fat=734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
-    ntfs=734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
-    dmg=734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
-    hfs=734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
-    xar=734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
-    squashfs=734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
-    CopyTree=277,%COMMANDER_PATH%\Plugins\wcx\CopyTree\CopyTree.wcx
-    mht=414,%COMMANDER_PATH%\plugins\wcx\MhtUnPack\MhtUnPack.wcx
-    mhtml=414,%COMMANDER_PATH%\plugins\wcx\MhtUnPack\MhtUnPack.wcx
-    msg=414,%COMMANDER_PATH%\plugins\wcx\MhtUnPack\MhtUnPack.wcx
-    b64=414,%COMMANDER_PATH%\plugins\wcx\MhtUnPack\MhtUnPack.wcx
-    uue=414,%COMMANDER_PATH%\plugins\wcx\MhtUnPack\MhtUnPack.wcx
-    xxe=414,%COMMANDER_PATH%\plugins\wcx\MhtUnPack\MhtUnPack.wcx
-    lst=23,%COMMANDER_PATH%\plugins\wcx\CatalogMaker\CatalogMaker.wcx
-    Total7zip=735,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
-    Imagine=471,%COMMANDER_PATH%\Plugins\wlx\Imagine\Imagine.wcx
-    CatalogMaker=23,%COMMANDER_PATH%\Plugins\wcx\CatalogMaker\CatalogMaker.wcx
-    
+    001=            734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
+    7z=             735,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
+    arj=            734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
+    b64=            414,%COMMANDER_PATH%\plugins\wcx\MhtUnPack\MhtUnPack.wcx
+    bz2=            734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
+    bzip2=          734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
+    cab=            734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
+    catalogMaker=   23, %COMMANDER_PATH%\Plugins\wcx\CatalogMaker\CatalogMaker.wcx
+    copyTree=       277,%COMMANDER_PATH%\Plugins\wcx\CopyTree\CopyTree.wcx
+    cpio=           734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
+    deb=            734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
+    dmg=            734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
+    fat=            734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
+    gzip=           734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
+    hfs=            734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
+    imagine=        471,%COMMANDER_PATH%\Plugins\wlx\Imagine\Imagine.wcx
+    iso=            734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
+    lha=            734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
+    lst=            23, %COMMANDER_PATH%\plugins\wcx\CatalogMaker\CatalogMaker.wcx
+    lzh=            734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
+    lzma=           734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
+    mht=            414,%COMMANDER_PATH%\plugins\wcx\MhtUnPack\MhtUnPack.wcx
+    mhtml=          414,%COMMANDER_PATH%\plugins\wcx\MhtUnPack\MhtUnPack.wcx
+    msg=            414,%COMMANDER_PATH%\plugins\wcx\MhtUnPack\MhtUnPack.wcx
+    multiArc=       %COMMANDER_PATH%\Plugins\wcx\MultiArc\MultiArc.wcx
+    ntfs=           734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
+    rpm=            734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
+    squashfs=       734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
+    swm=            734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
+    taz=            734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
+    tbz2=           734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
+    tbz=            734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
+    total7zip=      735,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
+    tpz=            734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
+    txz=            734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
+    uue=            414,%COMMANDER_PATH%\plugins\wcx\MhtUnPack\MhtUnPack.wcx
+    vhd=            734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
+    wim=            735,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
+    xar=            734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
+    xxe=            414,%COMMANDER_PATH%\plugins\wcx\MhtUnPack\MhtUnPack.wcx
+    xz=             734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
+    z=              734,%COMMANDER_PATH%\Plugins\wcx\Total7zip\Total7zip.wcx
+
 [PackerPlugins64]
     $checksum$=3516426386
-    exts=7z*001*cab*iso*xz*txz*lzma*cpio*bz2*bzip2*tbz2*tbz*gzip*tpz*z*taz*lzh*lha*rpm*deb*arj*vhd*wim*swm*fat*ntfs*dmg*hfs*xar*squashfs*Total7zip*Imagine*
-    
+    exts=001*7z*arj*bz2*bzip2*cab*cpio*deb*dmg*fat*gzip*hfs*imagine*iso*lha*lzh*lzma*multiArc*ntfs*rpm*squashfs*swm*taz*tbz2*tbz*total7zip*tpz*txz*vhd*wim*xar*xz*z*
+
 [PluginDuplicates]
     
 [PrintDir]
@@ -747,6 +775,8 @@
 [RightHistory]
     RedirectSection=%COMMANDER_PATH%\ini\History.ini
         
+[SearchCustomField]
+
 [Searches]
     RedirectSection=%COMMANDER_PATH%\Utilities\TotalCom\Impomezia\colors\impomezia_EN.ini
     
@@ -781,6 +811,30 @@
     5=166
     AdjustWidth=1
     
+[ThumbsCustomField]
+
+[User]
+    menu1=cmd here
+    cmd1=em_vim_0245
+    menu2="    cmd here :: Administrator"
+    cmd2=em_vim_0244
+    menu3=Powershell here
+    cmd3=em_vim_0246
+    menu4="    Powershell x86"
+    cmd4=em_vim_2246
+    menu5="    Powershell :: Administrator"
+    cmd5=em_vim_1246
+    menu6=Powershell ISE
+    cmd6=em_vim_0251
+    menu7="    Powershell ISE :: Administrator"
+    cmd7=em_vim_1251
+    menu8=Run :: Administrator
+    cmd8=em_vim_0242
+    menu9=Редактировать файл меню (LANGUAGE\Wcmd_Rus.ini)
+    cmd9=em_vim_2000
+    menu10=Редактировать все файлы конфигурации
+    cmd10=em_vim_2003
+
 [ViewModes]
     0_name=<По умолчанию>
     0_icon=
@@ -803,26 +857,3 @@
     1_mode=2
     2_rules=?.git
     2_mode=3
-
-[user]
-menu1=cmd here
-cmd1=em_vim_0245
-menu2="    cmd here :: Administrator"
-cmd2=em_vim_0244
-menu3=Powershell here
-cmd3=em_vim_0246
-menu4="    Powershell x86"
-cmd4=em_vim_2246
-menu5="    Powershell :: Administrator"
-cmd5=em_vim_1246
-menu6=Powershell ISE
-cmd6=em_vim_0251
-menu7="    Powershell ISE :: Administrator"
-cmd7=em_vim_1251
-menu8=Run :: Administrator
-cmd8=em_vim_0242
-menu9=Редактировать файл меню (LANGUAGE\Wcmd_Rus.ini)
-cmd9=em_vim_2000
-menu10=Редактировать все файлы конфигурации
-cmd10=em_vim_2003
-
