Consolidation of menus

--- a/ini/Associations.ini
+++ b/ini/Associations.ini
@@ -63,8 +63,8 @@ Filter20_open=""%COMMANDER_PATH%\Plugins\wlx\slister\SumatraPDF.exe" "%1""
 Filter21=;*.pdf;*.djvu;*.djv;*.xps;*.cbz;*.cbr;*.mobi;*.epub;*.fb2;*.pdb;*.tcr;
 Filter21_open=""%COMMANDER_PATH%\Plugins\wlx\slister\SumatraPDF.exe" "%1""
 Filter22=;*.txt;*.mnu;*.lng;
+Filter22_open=""%notepad++%" "%1""
 Filter22.icon=%COMMANDER_PATH%\WCMICONS.DLL,132
-Filter22_open=""%COMMANDER_PATH%\AkelPad.exe" "%1""
 Filter23=;*.res;
 Filter23_open=""%COMMANDER_PATH%\Programs\Resources\Restorator\Restorator.exe" "%1""
 Filter24=;*.dll;
