Full set of ini files

--- a/ini/Shortcuts.ini
+++ b/ini/Shortcuts.ini
@@ -1,42 +1,40 @@
+
+[Alias]
+controlpanel=em_vim_0389
+
 [Shortcuts]
-    F2=cm_RenameOnly
-    F9=cm_Rereadsource
-    F10=cm_Associate
-    F11=em_vim_0446
-    ;F12=em_vim_0632
-    CA+F5=cm_PackFiles
-    A+F11=cm_CopyNetNamesToClip
-    A+F12=cm_CopySrcPathToClip
-    S+F1=cm_CompareFilesByContent
-    S+F12=cm_CopyTrgPathToClip
-    A+A=cm_SetAttrib
-    A+B=cm_visButtonbar
-    A+C=cm_CompareFilesByContent
-    A+D=cm_FileSync
-    A+I=cm_ShowHint
-    A+K=cm_visKeyButtons
-    A+L=cm_UnloadPlugins
-    A+Q=cm_ShowQuickSearch
-    A+R=cm_OpenNetwork
-    A+S=cm_SaveSelection
-    A+T=cm_OpenControls
-    A+W=cm_visDirTabs
-    A+UP=cm_editpath
-    AS+S=cm_SaveSelectionToFile
-    AS+R=cm_LoadSelectionFromFile
-    C+G=cm_VerticalPanels
-    C+H=cm_SwitchHidSys
-    C+J=cm_matchsrc
-    C+O=cm_OpenTransferManager
-    C+S=cm_ShowOnlySelected
-    CS+K=cm_OpenRecycled
-    ;
-    C+INS=em_vim_0736
-    F1=cm_Edit
-    C+L=em_vim_0245
-    CA+L=em_vim_0244
-    C+P=em_vim_0246
-    CA+P=em_vim_1246
+F2=cm_RenameOnly
+F9=cm_RereadSource
+F10=cm_Associate
+F11=em_vim_0446
+;F12=em_vim_0632
+CA+F5=cm_PackFiles
+A+F11=cm_CopyNetNamesToClip
+A+F12=cm_CopySrcPathToClip
+S+F1=cm_CompareFilesByContent
+S+F12=cm_CopyTrgPathToClip
+A+A=cm_SetAttrib
+A+B=cm_visButtonbar
+A+C=cm_CompareFilesByContent
+A+D=cm_FileSync
+A+I=cm_ShowHint
+A+K=cm_visKeyButtons
+A+L=cm_UnloadPlugins
+A+Q=cm_ShowQuickSearch
+A+R=cm_OpenNetwork
+A+S=cm_SaveSelection
+A+T=cm_OpenControls
+A+W=cm_visDirTabs
+A+UP=cm_editpath
+AS+S=cm_SaveSelectionToFile
+AS+R=cm_LoadSelectionFromFile
+C+G=cm_VerticalPanels
+C+H=cm_SwitchHidSys
+C+J=cm_matchsrc
+C+O=cm_OpenTransferManager
+C+S=cm_ShowOnlySelected
+CS+K=cm_OpenRecycled
+C+INS=em_vim_0736
+C+M=em_vim_0928
 
 [ShortcutsWin]
-    F2=cm_renameonly
