--- a/ini/Plugins.ini
+++ b/ini/Plugins.ini
@@ -36,7 +36,7 @@
 10_detect=EXT="lnk"
 11_detect=EXT="url"
 12_detect=EXT="mp3" | EXT="mp2" | EXT="mp1"
-13_detect=[0]=66 | [0]=71 | [0]=10 | [0]=137 | [0]=56 | [0]=73 | ([0]=77 & [1]!=90) | FIND("ÿØ") | FIND("jP  ")
+13_detect=[0]=66 | [0]=71 | [0]=10 | [0]=137 | [0]=56 | [0]=73 | ([0]=77 & [1]!=90) | FIND("ÑÐ¨") | FIND("jP  ")
 14_detect=EXT="fb2" | EXT="zip" | EXT="fb2z" | EXT="zfb2" | EXT="epub"
 15_detect=EXT="swf" & (SIZE>22) & ( ([0]="C" & [1]="W" & [2]="S") | ([0]="F" & [1]="W" & [2]="S") )
 16_detect=EXT="7z" | EXT="cab" | EXT="iso" | EXT= "msi" | EXT="rar" | EXT="zip" | EXT="xz" | EXT="tar" | EXT="lzh" | EXT="lzma" | EXT="wim" | EXT="esd"
@@ -55,7 +55,7 @@
 7_flags=0
 
 [ContentPlugins64]
-$checksum$=363623940
+$checksum$=4135941893
 0=1
 1=1
 2=1
