--- a/ini/Rename.ini
+++ b/ini/Rename.ini
@@ -1,65 +1,65 @@
 
 [Rename]
-{ÃÛÁ˚Í‡Î¸Ì˚Â ÚÂÍË}>—˜∏Ú˜ËÍ.»ÒÔÓÎÌËÚÂÎ¸_Õ‡Á‚‡ÌËÂ_name=[C].[=tcmediainfo.»ÒÔÓÎÌËÚÂÎ¸]_[=tcmediainfo.Õ‡Á‚‡ÌËÂ]
-{ÃÛÁ˚Í‡Î¸Ì˚Â ÚÂÍË}>—˜∏Ú˜ËÍ.»ÒÔÓÎÌËÚÂÎ¸_Õ‡Á‚‡ÌËÂ_ext=[E]
-{ÃÛÁ˚Í‡Î¸Ì˚Â ÚÂÍË}>—˜∏Ú˜ËÍ.»ÒÔÓÎÌËÚÂÎ¸_Õ‡Á‚‡ÌËÂ_params=0|1|1|1
-{ÃÛÁ˚Í‡Î¸Ì˚Â ÚÂÍË}>—˜∏Ú˜ËÍ.Õ‡Á‚‡ÌËÂ_name=[C].[=tcmediainfo.Õ‡Á‚‡ÌËÂ]
-{ÃÛÁ˚Í‡Î¸Ì˚Â ÚÂÍË}>—˜∏Ú˜ËÍ.Õ‡Á‚‡ÌËÂ_ext=[E]
-{ÃÛÁ˚Í‡Î¸Ì˚Â ÚÂÍË}>—˜∏Ú˜ËÍ.Õ‡Á‚‡ÌËÂ_params=0|1|1|1
-{ÃÛÁ˚Í‡Î¸Ì˚Â ÚÂÍË}>—˜∏Ú˜ËÍ.Õ‡Á‚‡ÌËÂ_»ÒÔÓÎÌËÚÂÎ¸_name=[C].[=tcmediainfo.Õ‡Á‚‡ÌËÂ]_[=tcmediainfo.»ÒÔÓÎÌËÚÂÎ¸]
-{ÃÛÁ˚Í‡Î¸Ì˚Â ÚÂÍË}>—˜∏Ú˜ËÍ.Õ‡Á‚‡ÌËÂ_»ÒÔÓÎÌËÚÂÎ¸_ext=[E]
-{ÃÛÁ˚Í‡Î¸Ì˚Â ÚÂÍË}>—˜∏Ú˜ËÍ.Õ‡Á‚‡ÌËÂ_»ÒÔÓÎÌËÚÂÎ¸_params=0|1|1|1
-{ÃÛÁ˚Í‡Î¸Ì˚Â ÚÂÍË}>—˜∏Ú˜ËÍ.»ÒÔÓÎÌËÚÂÎ¸_Õ‡Á‚‡ÌËÂ_¡ËÚÂÈÚ_name=[C].[=tcmediainfo.»ÒÔÓÎÌËÚÂÎ¸]_[=tcmediainfo.Õ‡Á‚‡ÌËÂ]_[=tcmediainfo.¡ËÚÂÈÚ ‡Û‰ËÓ.KBps]_KBps
-{ÃÛÁ˚Í‡Î¸Ì˚Â ÚÂÍË}>—˜∏Ú˜ËÍ.»ÒÔÓÎÌËÚÂÎ¸_Õ‡Á‚‡ÌËÂ_¡ËÚÂÈÚ_ext=[E]
-{ÃÛÁ˚Í‡Î¸Ì˚Â ÚÂÍË}>—˜∏Ú˜ËÍ.»ÒÔÓÎÌËÚÂÎ¸_Õ‡Á‚‡ÌËÂ_¡ËÚÂÈÚ_params=0|1|1|1
-{ÃÛÁ˚Í‡Î¸Ì˚Â ÚÂÍË}>Õ‡Á‚‡ÌËÂ_»ÒÔÓÎÌËÚÂÎ¸_¡ËÚÂÈÚ_name=[=tcmediainfo.»ÒÔÓÎÌËÚÂÎ¸]_[=tcmediainfo.Õ‡Á‚‡ÌËÂ]_[=tcmediainfo.¡ËÚÂÈÚ ‡Û‰ËÓ.KBps]_KBps
-{ÃÛÁ˚Í‡Î¸Ì˚Â ÚÂÍË}>Õ‡Á‚‡ÌËÂ_»ÒÔÓÎÌËÚÂÎ¸_¡ËÚÂÈÚ_ext=[E]
-{ÃÛÁ˚Í‡Î¸Ì˚Â ÚÂÍË}>Õ‡Á‚‡ÌËÂ_»ÒÔÓÎÌËÚÂÎ¸_¡ËÚÂÈÚ_params=0|1|1|1
-{ÃÛÁ˚Í‡Î¸Ì˚Â ÚÂÍË}>»ÒÔÓÎÌËÚÂÎ¸_Õ‡Á‚‡ÌËÂ_¡ËÚÂÈÚ_name=[=tcmediainfo.»ÒÔÓÎÌËÚÂÎ¸]_[=tcmediainfo.Õ‡Á‚‡ÌËÂ]_[=tcmediainfo.¡ËÚÂÈÚ ‡Û‰ËÓ.KBps]_KBps
-{ÃÛÁ˚Í‡Î¸Ì˚Â ÚÂÍË}>»ÒÔÓÎÌËÚÂÎ¸_Õ‡Á‚‡ÌËÂ_¡ËÚÂÈÚ_ext=[E]
-{ÃÛÁ˚Í‡Î¸Ì˚Â ÚÂÍË}>»ÒÔÓÎÌËÚÂÎ¸_Õ‡Á‚‡ÌËÂ_¡ËÚÂÈÚ_params=0|1|1|1
-{ÃÛÁ˚Í‡Î¸Ì˚Â ÚÂÍË}>»ÒÔÓÎÌËÚÂÎ¸_Õ‡Á‚‡ÌËÂ_name=[=tcmediainfo.»ÒÔÓÎÌËÚÂÎ¸]_[=tcmediainfo.Õ‡Á‚‡ÌËÂ]
-{ÃÛÁ˚Í‡Î¸Ì˚Â ÚÂÍË}>»ÒÔÓÎÌËÚÂÎ¸_Õ‡Á‚‡ÌËÂ_ext=[E]
-{ÃÛÁ˚Í‡Î¸Ì˚Â ÚÂÍË}>»ÒÔÓÎÌËÚÂÎ¸_Õ‡Á‚‡ÌËÂ_params=0|1|1|1
-{ÃÛÁ˚Í‡Î¸Ì˚Â ÚÂÍË}>Õ‡Á‚‡ÌËÂ_¡ËÚÂÈÚ_name=[=tcmediainfo.Õ‡Á‚‡ÌËÂ]_[=tcmediainfo.¡ËÚÂÈÚ ‡Û‰ËÓ.KBps]_KBps
-{ÃÛÁ˚Í‡Î¸Ì˚Â ÚÂÍË}>Õ‡Á‚‡ÌËÂ_¡ËÚÂÈÚ_ext=[E]
-{ÃÛÁ˚Í‡Î¸Ì˚Â ÚÂÍË}>Õ‡Á‚‡ÌËÂ_¡ËÚÂÈÚ_params=0|1|1|1
-{¬Ë‰ÂÓ}>—˜∏Ú˜ËÍ.Õ‡Á‚‡ÌËÂ_¬Ò∏ ‚Ë‰ÂÓ Ó‰ÌÓÈ ÒÚÓÍÓÈ_name=[C].[N]_[=tcmediainfo.¬Ò∏ ‚Ë‰ÂÓ ÒÚÓÍÓÈ]
-{¬Ë‰ÂÓ}>—˜∏Ú˜ËÍ.Õ‡Á‚‡ÌËÂ_¬Ò∏ ‚Ë‰ÂÓ Ó‰ÌÓÈ ÒÚÓÍÓÈ_ext=[E]
-{¬Ë‰ÂÓ}>—˜∏Ú˜ËÍ.Õ‡Á‚‡ÌËÂ_¬Ò∏ ‚Ë‰ÂÓ Ó‰ÌÓÈ ÒÚÓÍÓÈ_params=0|1|1|1
-{¬Ë‰ÂÓ}>Õ‡Á‚‡ÌËÂ_¬Ò∏ ‚Ë‰ÂÓ Ó‰ÌÓÈ ÒÚÓÍÓÈ_name=[N]_[=tcmediainfo.¬Ò∏ ‚Ë‰ÂÓ ÒÚÓÍÓÈ]
-{¬Ë‰ÂÓ}>Õ‡Á‚‡ÌËÂ_¬Ò∏ ‚Ë‰ÂÓ Ó‰ÌÓÈ ÒÚÓÍÓÈ_ext=[E]
-{¬Ë‰ÂÓ}>Õ‡Á‚‡ÌËÂ_¬Ò∏ ‚Ë‰ÂÓ Ó‰ÌÓÈ ÒÚÓÍÓÈ_params=0|1|1|1
-{»ÁÓ·‡ÊÂÌËˇ}>Õ‡Á‚‡ÌËÂ_–‡ÁÏÂ˚_√ÎÛ·ËÌ‡ ˆ‚ÂÚ‡_name=[N]_[=shelldetails.–‡ÁÏÂ˚]_[=shelldetails.√ÎÛ·ËÌ‡ ˆ‚ÂÚ‡]
-{»ÁÓ·‡ÊÂÌËˇ}>Õ‡Á‚‡ÌËÂ_–‡ÁÏÂ˚_√ÎÛ·ËÌ‡ ˆ‚ÂÚ‡_ext=[E]
-{»ÁÓ·‡ÊÂÌËˇ}>Õ‡Á‚‡ÌËÂ_–‡ÁÏÂ˚_√ÎÛ·ËÌ‡ ˆ‚ÂÚ‡_params=0|1|1|1
-{»ÁÓ·‡ÊÂÌËˇ}>—˜∏Ú˜ËÍ.Õ‡Á‚‡ÌËÂ_–‡ÁÏÂ˚_√ÎÛ·ËÌ‡ ˆ‚ÂÚ‡_name=[C].[N]_[=shelldetails.–‡ÁÏÂ˚]_[=shelldetails.√ÎÛ·ËÌ‡ ˆ‚ÂÚ‡]
-{»ÁÓ·‡ÊÂÌËˇ}>—˜∏Ú˜ËÍ.Õ‡Á‚‡ÌËÂ_–‡ÁÏÂ˚_√ÎÛ·ËÌ‡ ˆ‚ÂÚ‡_ext=[E]
-{»ÁÓ·‡ÊÂÌËˇ}>—˜∏Ú˜ËÍ.Õ‡Á‚‡ÌËÂ_–‡ÁÏÂ˚_√ÎÛ·ËÌ‡ ˆ‚ÂÚ‡_params=0|1|1|1
-{»ÁÓ·‡ÊÂÌËˇ}>Õ‡Á‚‡ÌËÂ_–‡ÁÏÂ˚_name=[N]_[=shelldetails.–‡ÁÏÂ˚]
-{»ÁÓ·‡ÊÂÌËˇ}>Õ‡Á‚‡ÌËÂ_–‡ÁÏÂ˚_ext=[E]
-{»ÁÓ·‡ÊÂÌËˇ}>Õ‡Á‚‡ÌËÂ_–‡ÁÏÂ˚_params=0|1|1|1
-{»ÁÓ·‡ÊÂÌËˇ}>—˜∏Ú˜ËÍ.Õ‡Á‚‡ÌËÂ_–‡ÁÏÂ˚_name=[C].[N]_[=shelldetails.–‡ÁÏÂ˚]
-{»ÁÓ·‡ÊÂÌËˇ}>—˜∏Ú˜ËÍ.Õ‡Á‚‡ÌËÂ_–‡ÁÏÂ˚_ext=[E]
-{»ÁÓ·‡ÊÂÌËˇ}>—˜∏Ú˜ËÍ.Õ‡Á‚‡ÌËÂ_–‡ÁÏÂ˚_params=0|1|1|1
-{œÓ„‡ÏÏ˚ *.exe}>»Ïˇ_¬ÂÒËˇ_name=[N]_[=tc.¬ÂÒËˇ (ÒÚÓÍ‡)]
-{œÓ„‡ÏÏ˚ *.exe}>»Ïˇ_¬ÂÒËˇ_ext=[E]
-{œÓ„‡ÏÏ˚ *.exe}>»Ïˇ_¬ÂÒËˇ_params=0|1|1|1
-»ÒÔÓÎÌˇÂÏ˚Â Ù‡ÈÎ˚ (»Ïˇ_¬ÂÒËˇ)_name=[N]_[=tc.¬ÂÒËˇ (ÒÚÓÍ‡)]
-»ÒÔÓÎÌˇÂÏ˚Â Ù‡ÈÎ˚ (»Ïˇ_¬ÂÒËˇ)_ext=[E]
-»ÒÔÓÎÌˇÂÏ˚Â Ù‡ÈÎ˚ (»Ïˇ_¬ÂÒËˇ)_params=0|1|1|1
-{»ÁÓ·‡ÊÂÌËˇ}>—˜∏Ú˜ËÍ._–‡ÁÏÂ˚_name=[C]._[=shelldetails.–‡ÁÏÂ˚]
-{»ÁÓ·‡ÊÂÌËˇ}>—˜∏Ú˜ËÍ._–‡ÁÏÂ˚_ext=[E]
-{»ÁÓ·‡ÊÂÌËˇ}>—˜∏Ú˜ËÍ._–‡ÁÏÂ˚_params=0|1|1|1
-{»ÁÓ·‡ÊÂÌËˇ}>(_exif.DateOriginal.Y-M-D)_(_exif.TimeOriginal.h.m.s)_name=[=exif.DateOriginal.Y-M-D]_[=exif.TimeOriginal.h.m.s]
-{»ÁÓ·‡ÊÂÌËˇ}>(_exif.DateOriginal.Y-M-D)_(_exif.TimeOriginal.h.m.s)_ext=[E]
-{»ÁÓ·‡ÊÂÌËˇ}>(_exif.DateOriginal.Y-M-D)_(_exif.TimeOriginal.h.m.s)_params=0|1|1|1
-{»ÁÓ·‡ÊÂÌËˇ}>ƒ‡Ú‡ Ò˙∏ÏÍË D.M.Y__h-m-s_name=[=shelldetails.ƒ‡Ú‡ Ò˙ÂÏÍË.D.M.Y__h-m-s]
-{»ÁÓ·‡ÊÂÌËˇ}>ƒ‡Ú‡ Ò˙∏ÏÍË D.M.Y__h-m-s_ext=[E]
-{»ÁÓ·‡ÊÂÌËˇ}>ƒ‡Ú‡ Ò˙∏ÏÍË D.M.Y__h-m-s_params=0|1|1|1
-{»ÁÓ·‡ÊÂÌËˇ}>ƒ‡Ú‡ Ò˙∏ÏÍË D.M.Y__h-m-s__–‡ÁÏÂ˚_name=[=shelldetails.ƒ‡Ú‡ Ò˙ÂÏÍË.D.M.Y__h-m-s]__[=shelldetails.–‡ÁÏÂ˚]
-{»ÁÓ·‡ÊÂÌËˇ}>ƒ‡Ú‡ Ò˙∏ÏÍË D.M.Y__h-m-s__–‡ÁÏÂ˚_ext=[E]
-{»ÁÓ·‡ÊÂÌËˇ}>ƒ‡Ú‡ Ò˙∏ÏÍË D.M.Y__h-m-s__–‡ÁÏÂ˚_params=0|1|1|1
-ƒÓ·‡‚ËÚ¸ ‰‡ÚÛ ÒÓÁ‰‡ÌËˇ Ó·˙ÂÍÚ‡_name=[N]_[=tc.ƒ‡Ú‡ ÒÓÁ‰‡ÌËˇ]
-ƒÓ·‡‚ËÚ¸ ‰‡ÚÛ ÒÓÁ‰‡ÌËˇ Ó·˙ÂÍÚ‡_ext=[E]
-ƒÓ·‡‚ËÚ¸ ‰‡ÚÛ ÒÓÁ‰‡ÌËˇ Ó·˙ÂÍÚ‡_params=0|1|1|1
+{–ú—É–∑—ã–∫–∞–ª—å–Ω—ã–µ —Ç—Ä–µ–∫–∏}>–°—á—ë—Ç—á–∏–∫.–ò—Å–ø–æ–ª–Ω–∏—Ç–µ–ª—å_–ù–∞–∑–≤–∞–Ω–∏–µ_name=[C].[=tcmediainfo.–ò—Å–ø–æ–ª–Ω–∏—Ç–µ–ª—å]_[=tcmediainfo.–ù–∞–∑–≤–∞–Ω–∏–µ]
+{–ú—É–∑—ã–∫–∞–ª—å–Ω—ã–µ —Ç—Ä–µ–∫–∏}>–°—á—ë—Ç—á–∏–∫.–ò—Å–ø–æ–ª–Ω–∏—Ç–µ–ª—å_–ù–∞–∑–≤–∞–Ω–∏–µ_ext=[E]
+{–ú—É–∑—ã–∫–∞–ª—å–Ω—ã–µ —Ç—Ä–µ–∫–∏}>–°—á—ë—Ç—á–∏–∫.–ò—Å–ø–æ–ª–Ω–∏—Ç–µ–ª—å_–ù–∞–∑–≤–∞–Ω–∏–µ_params=0|1|1|1
+{–ú—É–∑—ã–∫–∞–ª—å–Ω—ã–µ —Ç—Ä–µ–∫–∏}>–°—á—ë—Ç—á–∏–∫.–ù–∞–∑–≤–∞–Ω–∏–µ_name=[C].[=tcmediainfo.–ù–∞–∑–≤–∞–Ω–∏–µ]
+{–ú—É–∑—ã–∫–∞–ª—å–Ω—ã–µ —Ç—Ä–µ–∫–∏}>–°—á—ë—Ç—á–∏–∫.–ù–∞–∑–≤–∞–Ω–∏–µ_ext=[E]
+{–ú—É–∑—ã–∫–∞–ª—å–Ω—ã–µ —Ç—Ä–µ–∫–∏}>–°—á—ë—Ç—á–∏–∫.–ù–∞–∑–≤–∞–Ω–∏–µ_params=0|1|1|1
+{–ú—É–∑—ã–∫–∞–ª—å–Ω—ã–µ —Ç—Ä–µ–∫–∏}>–°—á—ë—Ç—á–∏–∫.–ù–∞–∑–≤–∞–Ω–∏–µ_–ò—Å–ø–æ–ª–Ω–∏—Ç–µ–ª—å_name=[C].[=tcmediainfo.–ù–∞–∑–≤–∞–Ω–∏–µ]_[=tcmediainfo.–ò—Å–ø–æ–ª–Ω–∏—Ç–µ–ª—å]
+{–ú—É–∑—ã–∫–∞–ª—å–Ω—ã–µ —Ç—Ä–µ–∫–∏}>–°—á—ë—Ç—á–∏–∫.–ù–∞–∑–≤–∞–Ω–∏–µ_–ò—Å–ø–æ–ª–Ω–∏—Ç–µ–ª—å_ext=[E]
+{–ú—É–∑—ã–∫–∞–ª—å–Ω—ã–µ —Ç—Ä–µ–∫–∏}>–°—á—ë—Ç—á–∏–∫.–ù–∞–∑–≤–∞–Ω–∏–µ_–ò—Å–ø–æ–ª–Ω–∏—Ç–µ–ª—å_params=0|1|1|1
+{–ú—É–∑—ã–∫–∞–ª—å–Ω—ã–µ —Ç—Ä–µ–∫–∏}>–°—á—ë—Ç—á–∏–∫.–ò—Å–ø–æ–ª–Ω–∏—Ç–µ–ª—å_–ù–∞–∑–≤–∞–Ω–∏–µ_–ë–∏—Ç—Ä–µ–π—Ç_name=[C].[=tcmediainfo.–ò—Å–ø–æ–ª–Ω–∏—Ç–µ–ª—å]_[=tcmediainfo.–ù–∞–∑–≤–∞–Ω–∏–µ]_[=tcmediainfo.–ë–∏—Ç—Ä–µ–π—Ç –∞—É–¥–∏–æ.KBps]_KBps
+{–ú—É–∑—ã–∫–∞–ª—å–Ω—ã–µ —Ç—Ä–µ–∫–∏}>–°—á—ë—Ç—á–∏–∫.–ò—Å–ø–æ–ª–Ω–∏—Ç–µ–ª—å_–ù–∞–∑–≤–∞–Ω–∏–µ_–ë–∏—Ç—Ä–µ–π—Ç_ext=[E]
+{–ú—É–∑—ã–∫–∞–ª—å–Ω—ã–µ —Ç—Ä–µ–∫–∏}>–°—á—ë—Ç—á–∏–∫.–ò—Å–ø–æ–ª–Ω–∏—Ç–µ–ª—å_–ù–∞–∑–≤–∞–Ω–∏–µ_–ë–∏—Ç—Ä–µ–π—Ç_params=0|1|1|1
+{–ú—É–∑—ã–∫–∞–ª—å–Ω—ã–µ —Ç—Ä–µ–∫–∏}>–ù–∞–∑–≤–∞–Ω–∏–µ_–ò—Å–ø–æ–ª–Ω–∏—Ç–µ–ª—å_–ë–∏—Ç—Ä–µ–π—Ç_name=[=tcmediainfo.–ò—Å–ø–æ–ª–Ω–∏—Ç–µ–ª—å]_[=tcmediainfo.–ù–∞–∑–≤–∞–Ω–∏–µ]_[=tcmediainfo.–ë–∏—Ç—Ä–µ–π—Ç –∞—É–¥–∏–æ.KBps]_KBps
+{–ú—É–∑—ã–∫–∞–ª—å–Ω—ã–µ —Ç—Ä–µ–∫–∏}>–ù–∞–∑–≤–∞–Ω–∏–µ_–ò—Å–ø–æ–ª–Ω–∏—Ç–µ–ª—å_–ë–∏—Ç—Ä–µ–π—Ç_ext=[E]
+{–ú—É–∑—ã–∫–∞–ª—å–Ω—ã–µ —Ç—Ä–µ–∫–∏}>–ù–∞–∑–≤–∞–Ω–∏–µ_–ò—Å–ø–æ–ª–Ω–∏—Ç–µ–ª—å_–ë–∏—Ç—Ä–µ–π—Ç_params=0|1|1|1
+{–ú—É–∑—ã–∫–∞–ª—å–Ω—ã–µ —Ç—Ä–µ–∫–∏}>–ò—Å–ø–æ–ª–Ω–∏—Ç–µ–ª—å_–ù–∞–∑–≤–∞–Ω–∏–µ_–ë–∏—Ç—Ä–µ–π—Ç_name=[=tcmediainfo.–ò—Å–ø–æ–ª–Ω–∏—Ç–µ–ª—å]_[=tcmediainfo.–ù–∞–∑–≤–∞–Ω–∏–µ]_[=tcmediainfo.–ë–∏—Ç—Ä–µ–π—Ç –∞—É–¥–∏–æ.KBps]_KBps
+{–ú—É–∑—ã–∫–∞–ª—å–Ω—ã–µ —Ç—Ä–µ–∫–∏}>–ò—Å–ø–æ–ª–Ω–∏—Ç–µ–ª—å_–ù–∞–∑–≤–∞–Ω–∏–µ_–ë–∏—Ç—Ä–µ–π—Ç_ext=[E]
+{–ú—É–∑—ã–∫–∞–ª—å–Ω—ã–µ —Ç—Ä–µ–∫–∏}>–ò—Å–ø–æ–ª–Ω–∏—Ç–µ–ª—å_–ù–∞–∑–≤–∞–Ω–∏–µ_–ë–∏—Ç—Ä–µ–π—Ç_params=0|1|1|1
+{–ú—É–∑—ã–∫–∞–ª—å–Ω—ã–µ —Ç—Ä–µ–∫–∏}>–ò—Å–ø–æ–ª–Ω–∏—Ç–µ–ª—å_–ù–∞–∑–≤–∞–Ω–∏–µ_name=[=tcmediainfo.–ò—Å–ø–æ–ª–Ω–∏—Ç–µ–ª—å]_[=tcmediainfo.–ù–∞–∑–≤–∞–Ω–∏–µ]
+{–ú—É–∑—ã–∫–∞–ª—å–Ω—ã–µ —Ç—Ä–µ–∫–∏}>–ò—Å–ø–æ–ª–Ω–∏—Ç–µ–ª—å_–ù–∞–∑–≤–∞–Ω–∏–µ_ext=[E]
+{–ú—É–∑—ã–∫–∞–ª—å–Ω—ã–µ —Ç—Ä–µ–∫–∏}>–ò—Å–ø–æ–ª–Ω–∏—Ç–µ–ª—å_–ù–∞–∑–≤–∞–Ω–∏–µ_params=0|1|1|1
+{–ú—É–∑—ã–∫–∞–ª—å–Ω—ã–µ —Ç—Ä–µ–∫–∏}>–ù–∞–∑–≤–∞–Ω–∏–µ_–ë–∏—Ç—Ä–µ–π—Ç_name=[=tcmediainfo.–ù–∞–∑–≤–∞–Ω–∏–µ]_[=tcmediainfo.–ë–∏—Ç—Ä–µ–π—Ç –∞—É–¥–∏–æ.KBps]_KBps
+{–ú—É–∑—ã–∫–∞–ª—å–Ω—ã–µ —Ç—Ä–µ–∫–∏}>–ù–∞–∑–≤–∞–Ω–∏–µ_–ë–∏—Ç—Ä–µ–π—Ç_ext=[E]
+{–ú—É–∑—ã–∫–∞–ª—å–Ω—ã–µ —Ç—Ä–µ–∫–∏}>–ù–∞–∑–≤–∞–Ω–∏–µ_–ë–∏—Ç—Ä–µ–π—Ç_params=0|1|1|1
+{–í–∏–¥–µ–æ}>–°—á—ë—Ç—á–∏–∫.–ù–∞–∑–≤–∞–Ω–∏–µ_–í—Å—ë –≤–∏–¥–µ–æ –æ–¥–Ω–æ–π —Å—Ç—Ä–æ–∫–æ–π_name=[C].[N]_[=tcmediainfo.–í—Å—ë –≤–∏–¥–µ–æ —Å—Ç—Ä–æ–∫–æ–π]
+{–í–∏–¥–µ–æ}>–°—á—ë—Ç—á–∏–∫.–ù–∞–∑–≤–∞–Ω–∏–µ_–í—Å—ë –≤–∏–¥–µ–æ –æ–¥–Ω–æ–π —Å—Ç—Ä–æ–∫–æ–π_ext=[E]
+{–í–∏–¥–µ–æ}>–°—á—ë—Ç—á–∏–∫.–ù–∞–∑–≤–∞–Ω–∏–µ_–í—Å—ë –≤–∏–¥–µ–æ –æ–¥–Ω–æ–π —Å—Ç—Ä–æ–∫–æ–π_params=0|1|1|1
+{–í–∏–¥–µ–æ}>–ù–∞–∑–≤–∞–Ω–∏–µ_–í—Å—ë –≤–∏–¥–µ–æ –æ–¥–Ω–æ–π —Å—Ç—Ä–æ–∫–æ–π_name=[N]_[=tcmediainfo.–í—Å—ë –≤–∏–¥–µ–æ —Å—Ç—Ä–æ–∫–æ–π]
+{–í–∏–¥–µ–æ}>–ù–∞–∑–≤–∞–Ω–∏–µ_–í—Å—ë –≤–∏–¥–µ–æ –æ–¥–Ω–æ–π —Å—Ç—Ä–æ–∫–æ–π_ext=[E]
+{–í–∏–¥–µ–æ}>–ù–∞–∑–≤–∞–Ω–∏–µ_–í—Å—ë –≤–∏–¥–µ–æ –æ–¥–Ω–æ–π —Å—Ç—Ä–æ–∫–æ–π_params=0|1|1|1
+{–ò–∑–æ–±—Ä–∞–∂–µ–Ω–∏—è}>–ù–∞–∑–≤–∞–Ω–∏–µ_–†–∞–∑–º–µ—Ä—ã_–ì–ª—É–±–∏–Ω–∞ —Ü–≤–µ—Ç–∞_name=[N]_[=shelldetails.–†–∞–∑–º–µ—Ä—ã]_[=shelldetails.–ì–ª—É–±–∏–Ω–∞ —Ü–≤–µ—Ç–∞]
+{–ò–∑–æ–±—Ä–∞–∂–µ–Ω–∏—è}>–ù–∞–∑–≤–∞–Ω–∏–µ_–†–∞–∑–º–µ—Ä—ã_–ì–ª—É–±–∏–Ω–∞ —Ü–≤–µ—Ç–∞_ext=[E]
+{–ò–∑–æ–±—Ä–∞–∂–µ–Ω–∏—è}>–ù–∞–∑–≤–∞–Ω–∏–µ_–†–∞–∑–º–µ—Ä—ã_–ì–ª—É–±–∏–Ω–∞ —Ü–≤–µ—Ç–∞_params=0|1|1|1
+{–ò–∑–æ–±—Ä–∞–∂–µ–Ω–∏—è}>–°—á—ë—Ç—á–∏–∫.–ù–∞–∑–≤–∞–Ω–∏–µ_–†–∞–∑–º–µ—Ä—ã_–ì–ª—É–±–∏–Ω–∞ —Ü–≤–µ—Ç–∞_name=[C].[N]_[=shelldetails.–†–∞–∑–º–µ—Ä—ã]_[=shelldetails.–ì–ª—É–±–∏–Ω–∞ —Ü–≤–µ—Ç–∞]
+{–ò–∑–æ–±—Ä–∞–∂–µ–Ω–∏—è}>–°—á—ë—Ç—á–∏–∫.–ù–∞–∑–≤–∞–Ω–∏–µ_–†–∞–∑–º–µ—Ä—ã_–ì–ª—É–±–∏–Ω–∞ —Ü–≤–µ—Ç–∞_ext=[E]
+{–ò–∑–æ–±—Ä–∞–∂–µ–Ω–∏—è}>–°—á—ë—Ç—á–∏–∫.–ù–∞–∑–≤–∞–Ω–∏–µ_–†–∞–∑–º–µ—Ä—ã_–ì–ª—É–±–∏–Ω–∞ —Ü–≤–µ—Ç–∞_params=0|1|1|1
+{–ò–∑–æ–±—Ä–∞–∂–µ–Ω–∏—è}>–ù–∞–∑–≤–∞–Ω–∏–µ_–†–∞–∑–º–µ—Ä—ã_name=[N]_[=shelldetails.–†–∞–∑–º–µ—Ä—ã]
+{–ò–∑–æ–±—Ä–∞–∂–µ–Ω–∏—è}>–ù–∞–∑–≤–∞–Ω–∏–µ_–†–∞–∑–º–µ—Ä—ã_ext=[E]
+{–ò–∑–æ–±—Ä–∞–∂–µ–Ω–∏—è}>–ù–∞–∑–≤–∞–Ω–∏–µ_–†–∞–∑–º–µ—Ä—ã_params=0|1|1|1
+{–ò–∑–æ–±—Ä–∞–∂–µ–Ω–∏—è}>–°—á—ë—Ç—á–∏–∫.–ù–∞–∑–≤–∞–Ω–∏–µ_–†–∞–∑–º–µ—Ä—ã_name=[C].[N]_[=shelldetails.–†–∞–∑–º–µ—Ä—ã]
+{–ò–∑–æ–±—Ä–∞–∂–µ–Ω–∏—è}>–°—á—ë—Ç—á–∏–∫.–ù–∞–∑–≤–∞–Ω–∏–µ_–†–∞–∑–º–µ—Ä—ã_ext=[E]
+{–ò–∑–æ–±—Ä–∞–∂–µ–Ω–∏—è}>–°—á—ë—Ç—á–∏–∫.–ù–∞–∑–≤–∞–Ω–∏–µ_–†–∞–∑–º–µ—Ä—ã_params=0|1|1|1
+{–ü—Ä–æ–≥—Ä–∞–º–º—ã *.exe}>–ò–º—è_–í–µ—Ä—Å–∏—è_name=[N]_[=tc.–í–µ—Ä—Å–∏—è (—Å—Ç—Ä–æ–∫–∞)]
+{–ü—Ä–æ–≥—Ä–∞–º–º—ã *.exe}>–ò–º—è_–í–µ—Ä—Å–∏—è_ext=[E]
+{–ü—Ä–æ–≥—Ä–∞–º–º—ã *.exe}>–ò–º—è_–í–µ—Ä—Å–∏—è_params=0|1|1|1
+–ò—Å–ø–æ–ª–Ω—è–µ–º—ã–µ —Ñ–∞–π–ª—ã (–ò–º—è_–í–µ—Ä—Å–∏—è)_name=[N]_[=tc.–í–µ—Ä—Å–∏—è (—Å—Ç—Ä–æ–∫–∞)]
+–ò—Å–ø–æ–ª–Ω—è–µ–º—ã–µ —Ñ–∞–π–ª—ã (–ò–º—è_–í–µ—Ä—Å–∏—è)_ext=[E]
+–ò—Å–ø–æ–ª–Ω—è–µ–º—ã–µ —Ñ–∞–π–ª—ã (–ò–º—è_–í–µ—Ä—Å–∏—è)_params=0|1|1|1
+{–ò–∑–æ–±—Ä–∞–∂–µ–Ω–∏—è}>–°—á—ë—Ç—á–∏–∫._–†–∞–∑–º–µ—Ä—ã_name=[C]._[=shelldetails.–†–∞–∑–º–µ—Ä—ã]
+{–ò–∑–æ–±—Ä–∞–∂–µ–Ω–∏—è}>–°—á—ë—Ç—á–∏–∫._–†–∞–∑–º–µ—Ä—ã_ext=[E]
+{–ò–∑–æ–±—Ä–∞–∂–µ–Ω–∏—è}>–°—á—ë—Ç—á–∏–∫._–†–∞–∑–º–µ—Ä—ã_params=0|1|1|1
+{–ò–∑–æ–±—Ä–∞–∂–µ–Ω–∏—è}>(_exif.DateOriginal.Y-M-D)_(_exif.TimeOriginal.h.m.s)_name=[=exif.DateOriginal.Y-M-D]_[=exif.TimeOriginal.h.m.s]
+{–ò–∑–æ–±—Ä–∞–∂–µ–Ω–∏—è}>(_exif.DateOriginal.Y-M-D)_(_exif.TimeOriginal.h.m.s)_ext=[E]
+{–ò–∑–æ–±—Ä–∞–∂–µ–Ω–∏—è}>(_exif.DateOriginal.Y-M-D)_(_exif.TimeOriginal.h.m.s)_params=0|1|1|1
+{–ò–∑–æ–±—Ä–∞–∂–µ–Ω–∏—è}>–î–∞—Ç–∞ —Å—ä—ë–º–∫–∏ D.M.Y__h-m-s_name=[=shelldetails.–î–∞—Ç–∞ —Å—ä–µ–º–∫–∏.D.M.Y__h-m-s]
+{–ò–∑–æ–±—Ä–∞–∂–µ–Ω–∏—è}>–î–∞—Ç–∞ —Å—ä—ë–º–∫–∏ D.M.Y__h-m-s_ext=[E]
+{–ò–∑–æ–±—Ä–∞–∂–µ–Ω–∏—è}>–î–∞—Ç–∞ —Å—ä—ë–º–∫–∏ D.M.Y__h-m-s_params=0|1|1|1
+{–ò–∑–æ–±—Ä–∞–∂–µ–Ω–∏—è}>–î–∞—Ç–∞ —Å—ä—ë–º–∫–∏ D.M.Y__h-m-s__–†–∞–∑–º–µ—Ä—ã_name=[=shelldetails.–î–∞—Ç–∞ —Å—ä–µ–º–∫–∏.D.M.Y__h-m-s]__[=shelldetails.–†–∞–∑–º–µ—Ä—ã]
+{–ò–∑–æ–±—Ä–∞–∂–µ–Ω–∏—è}>–î–∞—Ç–∞ —Å—ä—ë–º–∫–∏ D.M.Y__h-m-s__–†–∞–∑–º–µ—Ä—ã_ext=[E]
+{–ò–∑–æ–±—Ä–∞–∂–µ–Ω–∏—è}>–î–∞—Ç–∞ —Å—ä—ë–º–∫–∏ D.M.Y__h-m-s__–†–∞–∑–º–µ—Ä—ã_params=0|1|1|1
+–î–æ–±–∞–≤–∏—Ç—å –¥–∞—Ç—É —Å–æ–∑–¥–∞–Ω–∏—è –æ–±—ä–µ–∫—Ç–∞_name=[N]_[=tc.–î–∞—Ç–∞ —Å–æ–∑–¥–∞–Ω–∏—è]
+–î–æ–±–∞–≤–∏—Ç—å –¥–∞—Ç—É —Å–æ–∑–¥–∞–Ω–∏—è –æ–±—ä–µ–∫—Ç–∞_ext=[E]
+–î–æ–±–∞–≤–∏—Ç—å –¥–∞—Ç—É —Å–æ–∑–¥–∞–Ω–∏—è –æ–±—ä–µ–∫—Ç–∞_params=0|1|1|1
