--- a/wcx_ftp.ini
+++ b/wcx_ftp.ini
@@ -1,13 +1,11 @@
-[default]
-    pasvmode=0
-
 [General]
-    ConnectRetries=10
-    WaitDelay=5
-    transfermode=I
-    LogFile=
-    FtpInBackground=0
-    ModeZ=1
-    AutoResume=30
+ConnectRetries=10
+WaitDelay=5
+TransferMode=I
+LogFile=
+FtpInBackground=0
+ModeZ=1
+AutoResume=30
 
-
+[default]
+pasvmode=0
